# gen-inds

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: github-actions.yml
src/: lib.rs  vec_based.rs
